# Communication_Data_Visualiser

./: .gitignore  Dissection.md  Masterclass.md  Next_Steps.md  PROPOSAL.md  Project_Overview.md  README_CPP_DISSECTION.md  README_QML_DISSECTION.md  README_QML_EXPLAINED.md
Communications_Visualiser/: CMakeLists.txt  ConstellationPage.qml  DashboardPage.qml  Main.qml  dspengine.cpp  dspengine.h  main.cpp  serialhandler.cpp  serialhandler.h
Telecomms_results/: Dataset_Pipeline.ipynb  VLM_FineTuning.ipynb  dataset_labels.csv  sep_curves.csv
Telecomms_results/Final_VLM_Results/: vlm_classification_metrics.txt  vlm_predictions.csv
Telecomms_results/NN_training_results/: classification_metrics.txt
